[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-reliability-framework"
version = "0.0.0"
description = "ARF AI – Proprietary, access‑controlled. This package is deprecated."
readme = "README.md"
authors = [
    {name = "Juan Petter", email = "juan@arf-ai.com"}
]
license = {text = "Proprietary – Access‑Controlled"}
requires-python = ">=3.10"
dependencies = []
